--- a/Alain Nkouka/css/confirmationparemailfrancias.css
+++ b/Alain Nkouka/css/confirmationparemailfrancias.css
@@ -6,11 +6,9 @@ body{
 
 header{ 
   background-color:rgb(1, 112, 116);
-  border-bottom-color: black;
   margin: 0px;
-  border-bottom-color:#ffffff;
   height: 70px;
-  /* height: 50px; */
+ 
 }
 
 
@@ -24,20 +22,19 @@ h1{
 h2{
   color: black;
   text-align: center;
-  font-size: 40px;
+  font-size: 27px;
 }
  /* 2ieme titre */
 
 
-form{
+.form{
   background-color: #fff;
-  height: 200px;
-  width: 1130px;
   border-radius: 20px;
   text-align: center; 
-  margin: 80px;
+  margin: 0px;
 }
-/* La classe forme  */
+
+/* la classe de la div qui prends encompte la parti forme de la page */
 
 
 .champ{
