--- a/Alain Nkouka/css/stylesanglais.css
+++ b/Alain Nkouka/css/stylesanglais.css
@@ -1,116 +1,76 @@
 body {
-  background-color: #fff;
   padding: 0;
   margin: 0;
+  background-image: #DCDCDC;
+
 }
 
-/* Body */
-
-.header {
-  background-color: rgb(1, 112, 116);
-  height: 100PX;
+header {
+  background-color: rgb(59, 152, 147);
+  height: 90px;
+  border: solid rgb(231, 230, 230);
   margin: 0px;
 
 }
 
-/* la balise header  */
+/* Balise header */
 
 h1 {
-  font-size: 30px;
-  color: #fff;
+  font-size: 38px;
+  color: #ffffff;
   margin: 0px;
+  top: 30px;
 
 }
 
-/* la classe small  qui est le titre de ma page small world*/
+
+/* Titre de H1 de la page */
 
 
-.Email {
-  color: #fff;
-  font-size: 15px;
-}
-
-/* Balise Email pour géré le titre Email de input de connexion */
-
-.MotDepasse {
-  font-size: 16px;
-  color: #fff;
+.span {
+  display: flex;
+  justify-content: center;
   margin: 0px;
-}
-
-/* Mot de passe le titre de input */
-
-.conne {
-  /* text-align: center; */
-  margin: 0px;
+  margin-top: -27px;
 
 }
 
-/* la classe conne qui est dans le parent Nav. */
 
-
-
-.mdp {
-  color: #fff;
-  font-size: 15px;
-}
-
-/* code de carte la session active*/
-
-
-.toto {
-  color: #fff;
-  font-size: 15px;
-  margin-right: 60px;
-}
-
-/* Le Code du Mot de passe oublier */
-
-.GarderSession {
-  font-size: 15PX;
-  color: #fff;
-  margin: 0px;
-
-}
-
-/* gS class */
-
-
-
-.GarderMaSessionActive {
-  margin-right: 90px;
-
-}
-
-/* Le Code du Mot de passe oublier */
-
-
-.email {
+table {
+  color: #ffffff;
   font-size: 14px;
-  color: black;
   margin: 0px;
-  text-align: center;
 
 }
 
-/* class email qui est le parent de mon formulaire Email, mot de passe et connexion */
 
+.mdpo {
+  color: #ffffff;
+  text-decoration: none;
+
+}
 
 
 .LogoDrapeau {
   width: 30px;
   height: 20px;
-  margin-left: 90%;
-
+  float: right;
+  margin:5px;
 }
 
 /* logo image pour changer la langue. */
 
+section {
+  text-align: center;
+}
+/* balise section */
+
 h2 {
   text-align: center;
   font-size: 40px;
-  color: rgba(59, 89, 152);
+  color: blue;
   margin: 0px;
+  margin-top: 1px;
 
 }
 
@@ -118,7 +78,6 @@ h2 {
 
 
 .formulaire {
-  text-align: center;
   font-size: 20px;
   margin: 0px;
 
@@ -128,8 +87,7 @@ h2 {
 
 
 .date {
-  color: #1d212d;
-  text-align: center;
+  color: black;
   font-size: 15px;
 }
 
@@ -137,7 +95,6 @@ h2 {
 
 
 .sex {
-  text-align: center;
   font-size: 15px;
   color: black;
   border-bottom: blue;
@@ -146,31 +103,45 @@ h2 {
 /* la class sex */
 
 
-.champ {
-  text-align: center;
-  height: 30px;
-  width: 220px;
+.champs {
+  height: 35px;
+  width: 270px;
   font-size: 15px;
-  margin-top: 2px;
+  margin-top: 7px;
+  border-color: rgb(187, 187, 190);
+  border-radius: 5px;
+  border-style: double;
+  color: black;
+
 }
 
-/* class champ */
+/* class champs, les input de formulaire dépends tous de la classe champs*/
 
 
-
-.connexion {
-  text-align: center;
-}
-
-/* class connexion */
 
 
 .inscrire {
   height: 45px;
-  background-color: rgb(5, 107, 99);
-  color: #fff;
-  border-radius: 30px;
+  width: 270px;
+  background-color: #42b742;
+  color: #ffffff;
+  border-radius: 5px;
+  border-color: #fff;
   font-size: 20px;
+  border-style: double;
+  cursor: pointer;
 }
 
 /* bouton connexion de ma 1ere page */
+
+.message {
+  font-size: 12px;
+  margin: 0px;
+  margin-top: 20px;
+  color: rgb(120, 120, 247);
+  text-align: center;
+  margin-right: 45px;
+
+}
+
+/* Message */
