--- a/Alain Nkouka/css/stylesanglais.css
+++ b/Alain Nkouka/css/stylesanglais.css
@@ -15,6 +15,20 @@ header {
 
 /* Balise header */
 
+
+@media (max-width:838px) {
+
+  header {
+    background-color: rgb(59, 152, 147);
+    width: 100%;
+    height: 100px;
+
+
+  }
+
+}
+
+
 h1 {
   font-size: 38px;
   color: #ffffff;
@@ -25,6 +39,15 @@ h1 {
 
 
 /* Titre de H1 de la page */
+@media (max-width:559px) {
+
+  h1 {
+    margin-top: -6px;
+    text-align: center;
+    margin: 0px;
+  }
+
+}
 
 
 .span {
@@ -35,34 +58,137 @@ h1 {
 
 }
 
+@media (max-width:836px) {
+
+  .span {
+    margin-top: 2px;
+    justify-content: center;
+
+  }
+
+}
+
+
 
 table {
-  color: #ffffff;
+
   font-size: 14px;
   margin: 0px;
 
 }
 
+@media (max-width:838px) {
 
-.mdpo {
+  table {}
+
+}
+
+
+.inputGarderMaSessionActive {
+  margin: 0px;
+}
+
+@media (max-width:838px) {
+
+  .inputGarderMaSessionActive {
+    display: none;
+
+  }
+
+}
+
+
+
+.email {
+  color: #ffffff;
+  font-size: 14px;
+}
+
+/* balise email qui est dans la partie header */
+
+@media (max-width:838px) {
+
+  .email {
+    font-size: 20px;
+  }
+
+}
+
+
+.motdepasse {
+  color: #ffffff;
+  font-size: 14px;
+}
+
+/* balise motdepasse qui est dans la partie header */
+
+
+
+.motdepasseoublier {
   color: #ffffff;
   text-decoration: none;
 
 }
+
+/* la classe motdepasseoublier */
+
+@media (max-width:838px) {
+
+  .motdepasseoublier {
+    display: none;
+
+  }
+
+}
+
+/* mEdia query pour arreter d'afficher le motdepasseoublier */
+
+.GarderSession {
+  color: #ffffff;
+
+}
+
+/* la classe GarderSession */
+
+
+@media (max-width:838px) {
+
+  .GarderSession {
+    display: none;
+
+
+  }
+
+}
+
+/* mEdia query pour arreter d'afficher le garder session */
 
 
 .LogoDrapeau {
   width: 30px;
   height: 20px;
   float: right;
-  margin:5px;
+  margin: 5px;
 }
 
 /* logo image pour changer la langue. */
 
+
+@media (max-width:403px) {
+
+  .LogoDrapeau {
+    display: none;
+
+  }
+
+}
+
+/* mEdia query pour arreter d'afficher le drapeau */
+
 section {
   text-align: center;
 }
+
 /* balise section */
 
 h2 {
@@ -89,6 +215,7 @@ h2 {
 .date {
   color: black;
   font-size: 15px;
+  margin: 0px;
 }
 
 /* la class date */
