--- a/Alain Nkouka/css/LangueAnglais.css
+++ b/Alain Nkouka/css/LangueAnglais.css
@@ -150,66 +150,9 @@ header .navbar-expand-lg h1 {
 /*  Menu Paramètres */
 
 
-.div6 {
-    height: 20px;
-    width: 20px;
-}
-
-/* Taille du logo Localisation */
-
-.localisation {
-    font-size: 12px;
-    color: black;
-}
-
-/*  Menu Localisation */
-
-
-
 
 
 /* PARTI NAV  => */
-
-
-
-
-.row-cols-2 {
-    text-align: center;
-    justify-content: center
-}
-
-/* parti nav, la classe row-cols de bootstrap */
-
-
-
-.p-3 {
-
-    width: 15%;
-    font-size: 20px;
-    background-color: #fff;
-    margin-top: 140px;
-    height: 45%;
-    left: 3%;
-    border-radius: 20px;
-}
-
-/* P-3 EST  le coté profil de la page d'accueil qui est situer à gauche */
-
-
-
-
-.p-4 {
-    width: 250%;
-    font-size: 50px;
-    background-color: #fff;
-    margin-top: 70px;
-    height: 58%;
-    border-radius: 20px;
-    margin-left: -104%;
-    margin-top: 105px;
-}
-
-/*  Menu centre de ma page d'accueil */
 
 
 
@@ -221,33 +164,10 @@ header .navbar-expand-lg h1 {
 }
 
 
-.col .p-5 {
-    text-align: center;
-    width: 25%;
-    font-size: 50px;
-    background-color: #fff;
-    margin-top: 380px;
-    height: 75%;
-    margin: 140px;
-    border-radius: 20px;
-    margin-left: 72%;
-    color: black;
-}
-
-/*  Menu à droit Situer à l'accueil */
-
-
-
 /*  Parti Nav  */
 
-.para h2 {
-    color: blue;
-    font-size: 30px;
-    text-align: center;
-    margin-top: 4rem;
-}
+ 
 
-/* titre H2 */
 
 
 .para h2 {
@@ -273,7 +193,16 @@ header .navbar-expand-lg h1 {
 
 
 
-.info {
-    display: flex;
+.retour{
 
-}
+    margin: 55px; 
+    height: 45px;
+    width: 270px;
+    background-color: #42b742;
+    color:#ffffff; 
+    border-radius: 5px;
+    border-color: #fff;
+    font-size: 20px;
+    border-style: double;
+    cursor: pointer; 
+  }
